<?xml version="1.0"?>
<package>
  <name>pt_grey_ros_driver</name>
  <version>0.0.0</version>
  <description>Wrapper library for sending visualization messages</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="wayne@gramlich.net">Wayne Gramlich</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <author email="wayne@gramlich.net">Wayne Gramlich</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
</package>
